# ITCLOUD

./: .gitignore  README.md
Agenda/: CampoInput.qml  main.qml  qml.qrc
Calendario2/: Calendario2.pro  calendario.cpp  calendario.h  calendario.ui  diacalendario.cpp  diacalendario.h  dialogoagregarevento.cpp  dialogoagregarevento.h  dialogoagregarevento.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
CargaContratos/: CargaContratos.pro  campo.cpp  campo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  templatehandler.cpp  templatehandler.h  widgetcampos.cpp  widgetcampos.h
CargaContratosQML/: CMakeLists.txt  main.cpp  main.qml  templatehandler.cpp  templatehandler.h  templatehandlerinterface.cpp  templatehandlerinterface.h
CargaContratosQML/TestTemplateHandler/TestTemplateHandler/: CMakeLists.txt  TestTemplateHandler.cpp
CargaContratosQMLqmake/: CargaContratosQMLqmake.pro  templatehandler.cpp  templatehandler.h
CargaImagen/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ECGReceiver/: CMakeLists.txt  ecgreceiver.cpp  ecgreceiver.h  ecgreceiverinterface.cpp  ecgreceiverinterface.h  main.cpp  main.qml  qml.qrc
ECGReciverOpenGLWidgets/: CMakeLists.txt  graficador.cpp  graficador.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ECGSender/: CMakeLists.txt  ecgsender.cpp  ecgsender.h  ecgsenderinterface.cpp  ecgsenderinterface.h  main.cpp  main.qml
EjPrueba/: main.qml
EjemploQML/: Button.qml  CMakeLists.txt  main.qml
EjemploStackView/: main.cpp  main.qml
EjemploTesting/: CMakeLists.txt  TestQString.cpp
GestorVentas/: CMakeLists.txt  main.cpp  (+3 more)
(+143 files in other folders)
